Fixed styling error for fixed controls bar on narrow screens

--- a/components/src/controls/mod.css
+++ b/components/src/controls/mod.css
@@ -3,8 +3,9 @@
 
 /* Controls group */
 menu {
-  @apply box-content flex flex-row pb-1.5 h-7 xs:h-9 sm:h-16
-    sticky -top-[1.4rem] z-20
+  @apply box-content flex flex-row
+    pt-1.5 sm:pt-0 pb-1.5 h-7 xs:h-9 sm:h-16
+    sticky sm:-top-[1.4rem] z-20
     bg-custom-background-color;
 }
 
